--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,8 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/logo.png" class="header-logo">
+            <!--Source: https://icons8.com/icons/set/trail-->
+            <img src="images/logo.png" class="header-logo" alt="Image of a moutain and a trail leading up to it">
             <h1>{{{appName}}}</h1>
         </div>
         <nav>
