added a blog post form when logged in

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link rel="stylesheet" type="text/css" href="/css/loginRegisterStyles.css">
+    <link rel="stylesheet" type="text/css" href="/css/homeStyles.css">
+
 </head>
 <body>
     <header>
