home style updates

--- a/public/css/homeStyles.css
+++ b/public/css/homeStyles.css
@@ -46,6 +46,12 @@
     border-radius: 5px;
 }
 
+#emoji-container {
+    width: 100%;
+    margin-left: 40px;
+    margin-top: 20px;
+}
+
 form {
     display: flex;
     align-items: center;
