--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -29,6 +29,7 @@
         </section>
     {{/if}}
 
+    <!---->
     <section class="posts-list">
         <!-- recent posts -->
         {{#if posts.length}}
@@ -45,7 +46,7 @@
     </section>
 </section>
 
-
+<!--Hello-->
 {{! JavaScript for Emoji Integration }}
 <script>
     /*
