Add user avatars
Right now the avatars are not presistant and everytime one is needed it will generate a new one. It should be setting user avatar_url but I was getting bugs were main was not able to find user.avatar_url.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,7 @@
                         <img src="{{#if user.avatar_url}}
                                         {{user.avatar_url}}
                                     {{else}}
-                                        /avatar/{{user.username}}
+                                        /avatar/{{user.username}}?width=50&height=50
                                     {{/if}}" 
                                     alt="User Avatar" 
                                     class="header-avatar">
