--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -31,6 +31,7 @@
 
     <!---->
     <section class="posts-list">
+        <h1>Recent Posts</h1>
         <!-- recent posts -->
         {{#if posts.length}}
         <ul>
