--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link rel="stylesheet" type="text/css" href="/css/loginRegisterStyles.css">
     <link rel="stylesheet" type="text/css" href="/css/homeStyles.css">
+    <link rel="stylesheet" type="text/css" href="/css/postStyle.css"
 
 
 </head>
