--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,11 +1,25 @@
 {{! Partial for a single post }}
 <div class="post">
     <div class="post-avatar">
+        <img src="{{#if user.avatar_url}}
+                {{user.avatar_url}}
+            {{else}}
+                /avatar/{{user.username}}?width=50&height=50
+            {{/if}}" 
+            alt="User Avatar" 
+            class="header-avatar">
         <!-- the user's avatar -->
     </div>
     <div class="post-content preserve-newlines">
         <!-- the post -->
+        <h1>{{title}}</h1>
+        <section>{{content}}</section>
         <div class="post-status-bar">
+            <div class="likes-section" style="display: flex; flex-direction: row; align-items:center">
+                <a style="color:white">♥</a>
+                <p>{{likes}} likes</p>
+            </div>
+            <p>posted by {{username}} on {{timestamp}}</p>
             <!-- everything that is shown in the status bar -->
             <!-- Heart = ♥ -->
             <!-- font awesome  trashcan = <i class="fas fa-trash-alt"> </i>-->
