--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,11 +33,7 @@
                     <div class="user-info">
                         
                         <!-- conditional rendering based on variables -->
-                        <img src="{{#if user.avatar_url}}
-                                        {{user.avatar_url}}
-                                    {{else}}
-                                        /avatar/{{user.username}}?width=50&height=50
-                                    {{/if}}" 
+                        <img src="/avatar/{{user.username}}" 
                                     alt="User Avatar" 
                                     class="header-avatar">
                     </div>
