--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -22,7 +22,8 @@
 
             <div id="emoji-container" class="emoji-panel" style="display: none;">
                 <!-- input field for the emoji search, use oninput="searchEmojis() -->
-                <input placeholder="Search emojis" oninput="searchEmojis()">
+                <input id="emoji-search" placeholder = "Search emojis" oninput = "searchEmojis()">
+
                 <!-- a div, id = "emoji-grid" -->
                 <div id="emoji-grid"></div>
             </div>
@@ -65,6 +66,19 @@
 
         if(container.style.display === 'block' && allEmojis.length == 0){
             // go "Fetch" you some emojis and show them off with displayEmojies
+            fetchEmojis();
+        }
+    }
+
+    async function fetchEmojis(){
+        try{
+            const apiKey = 'c63bf78e0874e28c6cd4f3ff56b84cb7ba50871d';
+            const response = await fetch(`https://emoji-api.com/emojis?access_key=${apiKey}`);
+            const data = await response.json();
+            allEmojis = data;
+            displayEmojis(allEmojis);
+        }catch (error){
+            console.error('Error fetching emojis:', error);
         }
     }
 
@@ -85,12 +99,14 @@
         }
     }
 
+
     function searchEmojis() {
         const searchTerm = document.getElementById('emoji-search').value.toLowerCase();
         // array.filter takes a predicate
         // use string.includes. 
+        const filteredEmojis = allEmojis.filter(emoji => emoji.unicodeName.toLowerCase().includes(searchTerm));
 
-        const filteredEmojis = allEmojis.filter()
+       // const filteredEmojis = allEmojis.filter()
         
         displayEmojis(filteredEmojis);
     }
@@ -100,7 +116,15 @@
 
         // do this when you're doing getting the emoji on the form
         //
-        textarea.focus();  // Keep focus on the textarea
+        const textarea=document.querySelector(".postContent");
+        const cursorPos = textarea.selectionStart;
+        const textBeforeCursor = textarea.value.substring(0, cursorPos);
+        const textAfterCursor = textarea.value.substring(textarea.selectionEnd);
+        const updatedText = textBeforeCursor + emoji + textAfterCursor;
+
+        textarea.value = updatedText;
+        textarea.setSelectionRange(cursorPos + emoji.length, cursorPos +emoji.length);
+        textarea.focus();
     }
 </script>
 
