--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,11 +1,7 @@
 {{! Partial for a single post }}
 <div class="post">
     <div class="post-avatar">
-        <img src="{{#if avatar_url}}
-                        {{avatar_url}}
-                    {{else}}
-                        /avatar/{{username}}
-                    {{/if}}" 
+        <img src="{{#if avatar_url}}{{avatar_url}}{{else}}/avatar/{{username}}{{/if}}" 
             alt="User {{username}}" 
             class="header-avatar">
         <!-- the user's avatar -->
@@ -15,8 +11,12 @@
         <h1>{{title}}</h1>
         <section>{{content}}</section>
         <div class="post-status-bar">
-            <div class="likes-section" style="display: flex; flex-direction: row; align-items:center">
-                <a style="color:white">♥</a>
+            <div class="interaction-section" style="display: flex; flex-direction: row; align-items:center">
+                {{#ifCond username user.username}}
+                    <a onclick="handleDeleteClick({{id}})"><i class="fas fa-trash-alt"></i></a>
+                {{else}}
+                    <a onclick="handleLikeClick({{id}})">♥</a>
+                {{/ifCond}}
                 <p>{{likes}} likes</p>
             </div>
             <p>posted by {{username}} on {{timestamp}}</p>
@@ -26,19 +26,42 @@
         </div>        
     </div>
 </div>
+
 <script>
-
-    function handleLikeClick(event) {
-        const postId = event.target.getAttribute('data-id');
-
-        // you might want to "fetch" something...        
+    function handleLikeClick(id) {
+        console.log(id);
+        fetch('/like/' + id, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+        }) .then(response => {
+        if (response.ok) {
+            // If the request was successful, reload the page
+            window.location.reload();
+        } else {
+            console.error('Error:', response.statusText);
+        }
+        }).catch(error => {
+            console.error('Error:', error);
+        });
     }
 
-    function handleDeleteClick(event) {
-        const buttonElement = event.target.closest('.delete-button');
-        const postId = buttonElement.getAttribute('data-id');        
-
-        // you might want to "fetch" something...        
-        
+    function handleDeleteClick(id) {
+        fetch('/delete/' + id, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+        }) .then(response => {
+        if (response.ok) {
+            // If the request was successful, reload the page
+            window.location.reload();
+        } else {
+            console.error('Error:', response.statusText);
+        }
+        }).catch(error => {
+            console.error('Error:', error);
+        });
     }    
 </script>
