--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -16,11 +16,10 @@
 <section class="user-posts">
     <!-- you can call posts tweets, or truths, or whatever, these are neologisms. Choose your own new in server.js -->
     <h2>Your {{{postNeoType}}}s</h2>
-    
     <!-- you'll need to make this conditaionl and #each expression work -->
-    {{#if user.posts.length}}
+    {{#if posts.length}}
         <ul>
-            {{#each user.posts}}
+            {{#each posts}}
                 {{> post this user=../user}}
             {{/each}}
         </ul>
