--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -9,10 +9,10 @@
             <h1 style="color:black; margin-bottom:20px; font-size:20px">Create A New Post</h1>
             <form action="/posts" method="POST">
                 <div class="text-box">
-                    <input id="postTitle" name="title" placeholder="enter a title">
+                    <input id="postTitle" name="title" placeholder="enter a title" required>
                 </div>
                 <div class="text-box">
-                    <textarea name="content" class="postContent" style="max-width: 450px; max-height: 450px" placeholder="Whats on your mind"></textarea>
+                    <textarea name="content" class="postContent" style="max-width: 450px; max-height: 450px" placeholder="Whats on your mind" required></textarea>
                 </div>
                 <div class="form-actions">
                     <button type="button" class="emoji-button" onclick="toggleEmojiPanel()">😀</button>
