--- a/public/css/postStyles.css
+++ b/public/css/postStyles.css
@@ -1,7 +1,7 @@
 .post{
     width: 700px;
     height: 200px;
-    background-color: blue;
+    background-color: #a48363;
     margin-bottom: 20px;
 
     display:flex;
