--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,7 +12,7 @@
                     <input id="postTitle" name="title" placeholder="enter a title" required>
                 </div>
                 <div class="text-box">
-                    <textarea name="content" class="postContent" style="max-width: 450px; max-height: 450px" placeholder="Whats on your mind" required></textarea>
+                    <textarea name="content" class="postContent" style="max-width: 450px; max-height: 450px" placeholder="Whats on your mind {{user.username}}" required></textarea>
                 </div>
                 <div class="form-actions">
                     <button type="button" class="emoji-button" onclick="toggleEmojiPanel()">😀</button>
