--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,8 @@
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link rel="stylesheet" type="text/css" href="/css/loginRegisterStyles.css">
     <link rel="stylesheet" type="text/css" href="/css/homeStyles.css">
-    <link rel="stylesheet" type="text/css" href="/css/postStyle.css"
+    <link rel="stylesheet" type="text/css" href="/css/postStyles.css">
+    <link rel="stylesheet" type="text/css" href="/css/profileStyles.css">
 
 
 </head>
