--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,6 +10,9 @@
     
     <section class="profile-info">
         <!-- user profile info -->
+        <h1>User Profile</h1>
+        <p><strong>Username: </strong> {{user.username}}</p>
+        <p><strong>Member since: </strong>{{user.memberSince}}</p>
     </section>
 </div>
 
