--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -72,7 +72,7 @@
 
     async function fetchEmojis(){
         try{
-            const apiKey = 'c63bf78e0874e28c6cd4f3ff56b84cb7ba50871d';
+            const apiKey = 'API KEY HERE';
             const response = await fetch(`https://emoji-api.com/emojis?access_key=${apiKey}`);
             const data = await response.json();
             allEmojis = data;
