--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
 
 <section class="login-register">
     <section class = "login-area">
-        <h2>Login</h2>
+        <h2>Login with google</h2>
         <!-- errors will appear here -->
         {{#if loginError}}
             <p style="color: red;">{{loginError}}</p>
