--- a/public/css/profileStyles.css
+++ b/public/css/profileStyles.css
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 50px;
 }
 
 .user-posts ul{
@@ -32,4 +33,11 @@
 
 .user-posts h1{
     color:black;
+}
+
+.profile-actions {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px;
 }
