can profile pic sizes in templates

--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -3,7 +3,7 @@
     <div class="post-avatar">
         <img src="{{#if avatar_url}}{{avatar_url}}{{else}}/avatar/{{username}}{{/if}}" 
             alt="User {{username}}" 
-            class="header-avatar">
+            class="header-avatar" width="80px" height="80px">
         <!-- the user's avatar -->
     </div>
     <div class="post-content preserve-newlines">
