--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,11 +9,11 @@
     
     <title>{{{appName}}}</title>
 
-    <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link rel="stylesheet" type="text/css" href="/css/loginRegisterStyles.css">
     <link rel="stylesheet" type="text/css" href="/css/homeStyles.css">
     <link rel="stylesheet" type="text/css" href="/css/postStyles.css">
     <link rel="stylesheet" type="text/css" href="/css/profileStyles.css">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 
 
 </head>
@@ -36,7 +36,7 @@
                         <!-- conditional rendering based on variables -->
                         <img src="/avatar/{{user.username}}" 
                                     alt="User Avatar" 
-                                    class="header-avatar">
+                                    class="header-avatar" width="50px" height="50px">
                     </div>
                 {{else}}
                     <li><a href="/">Home</a></li>
